ui: fix input alignment

--- a/src/react/input.module.css
+++ b/src/react/input.module.css
@@ -8,7 +8,7 @@
 }
 
 .input {
-  position: relative;
+  position: absolute;
   outline: none;
   border: none;
   background: none;
